# raytracer

./: CMakeLists.txt  README.md
mains/: projectile.cpp  projectileDraw.cpp
src/: canvas.cpp  canvas.hpp  color.cpp  color.hpp  math.hpp  matrix.hpp  ppm_writer.cpp  ppm_writer.hpp  tuple.cpp  tuple.hpp
tests/: canvas_tests.cpp  color_tests.cpp  matrix_tests.cpp  ppm_writer_tests.cpp  tuple_tests.cpp
